# BevyBot

./: .env.example  Cargo.toml  Cross.toml  README.md
entity/: Cargo.toml
entity/src/: custom_datetime_format.rs  custom_datetime_format_option.rs  lib.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs  state.rs
src/api/: mod.rs
src/api/admin/: login.rs  middleware.rs  mod.rs
src/api/client/: mod.rs
src/bots/: bsky_client.rs  deepseek_client.rs  github_client.rs  mod.rs  qqbot_channel_impl.rs  qqbot_client.rs  qqbot_github_impl.rs
src/tasks/: mod.rs
src/tasks/bsky_task/: mod.rs  watch_merge_train_feed.rs
src/tasks/github_task/: mod.rs  watch_commits.rs  watch_issue_list.rs  watch_milestones.rs  watch_pr.rs
src/util/: cache.rs  error.rs  mod.rs  res.rs
