[package]
name = "api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"

chrono = "0.4.26"
serde = "1.0.180"
serde_json = "1.0.104"
env_logger = "0.11.3"
redis = { version = "0.32.0", features = ["tokio-comp"] }
dotenvy = "0.15.7"
log = "0.4.0"
sea-orm = { version = "1.1.12", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
anyhow = "1.0.72"
futures-util = "0.3.28"
rand = "0.9.1"
derive_more = "2.0.1"
mime = "0.3.17"
url = "2.5.2"

entity = { path = "./entity" }
migration = { path = "./migration" }
octocrab = "0.47.0"

# BotRS 框架
botrs = "0.2.5"
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
tokio_schedule = "0.3.2"
# 日志记录（推荐）
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 异步 trait 支持
async-trait = "0.1"
deepseek-api = "0.1.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
actix-rt = "2.11.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"

# [target.x86_64-unknown-linux-musl.dependencies]
# openssl = { version = "0.10", features = ["vendored"] }
# [target.x86_64-unknown-linux-gnu.dependencies]
# openssl = { version = "0.10", features = ["vendored"] }
[workspace]
members = [".", "entity", "migration"]
